# yew-tailwind-example

./: Cargo.toml  LICENSE  README.md
itoobao/web-server/: Cargo.toml
itoobao/web-server/src/: errors.rs  main.rs  state.rs
itoobao/web-server/src/middlewares/: mod.rs  request.rs  response.rs
itoobao/web-server/src/models/: connection.rs  mod.rs  user.rs
itoobao/web-wasm/: Cargo.toml  Makefile.toml
itoobao/web-wasm/src/: app.rs  error.rs  lib.rs  routes.rs  switch.rs
itoobao/web-wasm/src/components/: breadcrumbs.rs  error.rs  header.rs  left.rs  menu.rs  menu_item.rs  mod.rs
itoobao/web-wasm/src/pages/: index.rs  login.rs  mod.rs
itoobao/web-wasm/src/services/: mod.rs  request.rs
itoobao/web-wasm/src/types/: menu.rs  mod.rs  user.rs
itoobao/web-wasm/static/: .gitignore  package.json
itoobao/web-wasm/static/public/: index.html  test.html
itoobao/web-wasm/static/src/: styles.css
