[package]
name = "web-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.0"
tokio = { version = "1.10", features = ["full"] }
#日志
tracing-subscriber = "0.2.23"
tracing = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = {version = "0.1", features = ["full"]}
tower = { version = "0.4", features = ["full"] }

async-trait = "0.1.51"