[package]
name = "web-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
thiserror = "1"
yew = "0.18"
yew-router = { version="0.15", features = ["web_sys"] }
wasm-bindgen = "0.2"
wasm-logger = "0.2"

#parking_lot = "0.11"
parking_lot = { version = "0.11", features = ["wasm-bindgen"] }
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
log = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "NodeList",
  "Window",
  "HtmlCollection",
]

[dependencies.js-sys]
version = "0.3"